  "Dynamic Class-File Constants" to implement Javascript expressions. (Uwe Schindler)

* GITHUB#11657, LUCENE-10621: Upgrade to OpenNLP 2.3.2. (Christine Poerschke, Eric Pugh)

* GITHUB#13209: Upgrade snowball to 26db1ab9. (Robert Muir)

* GITHUB#12172: Update Romanian stopwords list to include the modern unicode forms.  (Trey Jones)

Optimizations
---------------------

* GITHUB#11857, GITHUB#11859, GITHUB#11893, GITHUB#11909: Hunspell: improved suggestion performance (Peter Gromov)

* GITHUB#12825, GITHUB#12834: Hunspell: improved dictionary loading performance, allowed in-memory entry sorting.
  (Peter Gromov)

* GITHUB#12372: Reduce allocation during HNSW construction (Jonathan Ellis)

* GITHUB#12552: Make FSTPostingsFormat load FSTs off-heap. (Tony X)

* GITHUB#13672: Leverage doc value skip lists in DocValuesRewriteMethod if indexed. (Greg Miller)

Bug Fixes
---------------------

* LUCENE-10599: LogMergePolicy is more likely to keep merging segments until
  they reach the maximum merge size. (Adrien Grand)

* GITHUB#12220: Hunspell: disallow hidden title-case entries from compound middle/end

* GITHUB#12878: Fix the declared Exceptions of Expression#evaluate() to match those
  of DoubleValues#doubleValue(). (Uwe Schindler)

Changes in Runtime Behavior
---------------------

* GITHUB#13244, GITHUB#13264: IOContext now uses ReadAdvice#RANDOM by default for read
  operations. An implication is that `MMapDirectory` will use POSIX_MADV_RANDOM
  on POSIX systems. To fallback to OS default behaviour, pass system property via
  `-Dorg.apache.lucene.store.defaultReadAdvice=normal`. This may be useful on systems
  with lots of RAM as this increases read-ahead. (Adrien Grand, Uwe Schindler)

* GITHUB13293: Auto I/O throttling is now disabled by default on ConcurrentMergeScheduler.
  (Adrien Grand)

* GITHUB#13293: ConcurrentMergeScheduler now allows up to 50% of the threads of the host to be used
  for merging. (Adrien Grand)
