@@ -173,6 +173,42 @@ public class TestOperations extends LuceneTestCase {
     assertTrue(exc.getMessage().contains("input automaton is too large"));
   }
 
+  public void testIsTotal() {
+    // minimal
+    assertFalse(Operations.isTotal(Automata.makeEmpty()));
+    assertFalse(Operations.isTotal(Automata.makeEmptyString()));
+    assertTrue(Operations.isTotal(Automata.makeAnyString()));
+    assertTrue(Operations.isTotal(Automata.makeAnyBinary(), 0, 255));
+    assertFalse(Operations.isTotal(Automata.makeNonEmptyBinary(), 0, 255));
+    // deterministic, but not minimal
+    assertTrue(Operations.isTotal(Operations.repeat(Automata.makeAnyChar())));
+    Automaton tricky =
+        Operations.repeat(
+            Operations.union(
+                Automata.makeCharRange(Character.MIN_CODE_POINT, 100),
+                Automata.makeCharRange(101, Character.MAX_CODE_POINT)));
+    assertTrue(Operations.isTotal(tricky));
+    // not total, but close
+    Automaton tricky2 =
+        Operations.repeat(
+            Operations.union(
+                Automata.makeCharRange(Character.MIN_CODE_POINT + 1, 100),
+                Automata.makeCharRange(101, Character.MAX_CODE_POINT)));
+    assertFalse(Operations.isTotal(tricky2));
+    Automaton tricky3 =
+        Operations.repeat(
+            Operations.union(
+                Automata.makeCharRange(Character.MIN_CODE_POINT, 99),
+                Automata.makeCharRange(101, Character.MAX_CODE_POINT)));
+    assertFalse(Operations.isTotal(tricky3));
+    Automaton tricky4 =
+        Operations.repeat(
+            Operations.union(
+                Automata.makeCharRange(Character.MIN_CODE_POINT, 100),
+                Automata.makeCharRange(101, Character.MAX_CODE_POINT - 1)));
+    assertFalse(Operations.isTotal(tricky4));
+  }
+
   /**
    * Returns the set of all accepted strings.
    *
